tests/snapshots/integration__integration_tests__help__help_config_create.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - create
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: /nonexistent/wt/approvals.toml
    WORKTRUNK_CONFIG_PATH: /nonexistent/wt/config.toml
    WORKTRUNK_SYSTEM_CONFIG_PATH: /etc/xdg/worktrunk/config.toml
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt config create - Create configuration file

Usage: [1m[36mwt config create[0m [36m[OPTIONS][0m

[1m[32mOptions:[0m
      [1m[36m--project[0m
          Create project config ([1m.config/wt.toml[0m) instead of user config

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/alias template variable & output; -vv: debug logs + diagnostic report + trace.log/output.log under .git/wt/logs/)

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

[1m[32mUser config[0m

Creates [2m~/.config/worktrunk/config.toml[0m with the following content:

[107m [0m [2m# # User Configuration[0m
[107m [0m [2m#[0m
[107m [0m [2m# Create with `wt config create`. Values shown are defaults unless noted otherwise.[0m
[107m [0m [2m#[0m
[107m [0m [2m# Location:[0m
[107m [0m [2m#[0m
[107m [0m [2m# - macOS/Linux: `~/.config/worktrunk/config.toml` (or `$XDG_CONFIG_HOME` if set)[0m
[107m [0m [2m# - Windows: `%APPDATA%\worktrunk\config.toml`[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Worktree path template[0m
[107m [0m [2m#[0m
[107m [0m [2m# Controls where new worktrees are created.[0m
[107m [0m [2m#[0m
[107m [0m [2m# **Available template variables:**[0m
[107m [0m [2m#[0m
[107m [0m [2m# - `{{ repo_path }}` — absolute path to the repository root (e.g., `/Users/me/code/myproject`. Or for bare repos, the bare directory itself)[0m
[107m [0m [2m# - `{{ repo }}` — repository directory name (e.g., `myproject`)[0m
[107m [0m [2m# - `{{ owner }}` — primary remote owner path (may include subgroups like `group/subgroup`)[0m
[107m [0m [2m# - `{{ branch }}` — raw branch name (e.g., `feature/auth`)[0m
[107m [0m [2m# - `{{ branch | sanitize }}` — filesystem-safe: `/` and `\` become `-` (e.g., `feature-auth`)[0m
[107m [0m [2m# - `{{ branch | sanitize_db }}` — database-safe: lowercase, underscores, hash suffix (e.g., `feature_auth_x7k`)[0m
[107m [0m [2m# - `{{ branch | codename(2) }}` — deterministic friendly name (e.g., `bright-lantern`); pair with `| hash` when used as a flat name[0m
[107m [0m [2m#[0m
[107m [0m [2m# **Examples** for repo at `~/code/myproject`, branch `feature/auth`:[0m
[107m [0m [2m#[0m
[107m [0m [2m# Default — sibling directory (`~/code/myproject.feature-auth`):[0m
[107m [0m [2m#[0m
[107m [0m [2m# worktree-path = "{{ repo_path }}/../{{ repo }}.{{ branch | sanitize }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# Inside the repository (`~/code/myproject/.worktrees/feature-auth`):[0m
[107m [0m [2m#[0m
[107m [0m [2m# worktree-path = "{{ repo_path }}/.worktrees/{{ branch | sanitize }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# Friendly branch-derived names (`~/code/myproject.bright-lantern-x7k`):[0m
[107m [0m [2m#[0m
[107m [0m [2m# worktree-path = "{{ repo_path }}/../{{ repo }}.{{ branch | codename(2) }}-{{ branch | hash }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# Friendly names with branch identity in a parent directory (`~/code/worktrees/feature-auth/bright-lantern`):[0m
[107m [0m [2m#[0m
[107m [0m [2m# worktree-path = "{{ repo_path }}/../worktrees/{{ branch | sanitize }}/{{ branch | codename(2) }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# Centralized worktrees directory (`~/worktrees/myproject/feature-auth`):[0m
[107m [0m [2m#[0m
[107m [0m [2m# worktree-path = "~/worktrees/{{ repo }}/{{ branch | sanitize }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# By remote owner path (`~/development/max-sixty/myproject/feature/auth`):[0m
[107m [0m [2m#[0m
[107m [0m [2m# worktree-path = "~/development/{{ owner }}/{{ repo }}/{{ branch }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# Bare repository (`~/code/myproject/feature-auth`):[0m
[107m [0m [2m#[0m
[107m [0m [2m# worktree-path = "{{ repo_path }}/../{{ branch | sanitize }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# `~` expands to the home directory. Relative paths resolve from `repo_path`.[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## LLM commit messages[0m
[107m [0m [2m#[0m
[107m [0m [2m# Generate commit messages automatically during merge. Requires an external CLI tool.[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Claude Code[0m
[107m [0m [2m#[0m
[107m [0m [2m# [commit.generation][0m
[107m [0m [2m# command = "CLAUDECODE= MAX_THINKING_TOKENS=0 claude -p --no-session-persistence --model=haiku --tools='' --disable-slash-commands --setting-sources='' --system-prompt=''"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Codex[0m
[107m [0m [2m#[0m
[107m [0m [2m# [commit.generation][0m
[107m [0m [2m# command = "codex exec -m gpt-5.1-codex-mini -c model_reasoning_effort='low' -c system_prompt='' --sandbox=read-only --json - | jq -sr '[.[] | select(.item.type? == \"agent_message\")] | last.item.text'"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### OpenCode[0m
[107m [0m [2m#[0m
[107m [0m [2m# [commit.generation][0m
[107m [0m [2m# command = "opencode run -m anthropic/claude-haiku-4.5 --variant fast"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### llm[0m
[107m [0m [2m#[0m
[107m [0m [2m# [commit.generation][0m
[107m [0m [2m# command = "llm -m claude-haiku-4.5"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### aichat[0m
[107m [0m [2m#[0m
[107m [0m [2m# [commit.generation][0m
[107m [0m [2m# command = "aichat -m claude:claude-haiku-4.5"[0m
[107m [0m [2m#[0m
[107m [0m [2m# See LLM commits docs (https://worktrunk.dev/llm-commits/) for setup and Custom prompt templates (#custom-prompt-templates) for template customization.[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Command config[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### List[0m
[107m [0m [2m#[0m
[107m [0m [2m# Persistent flag values for `wt list`. Override on command line as needed.[0m
[107m [0m [2m#[0m
[107m [0m [2m# [list][0m
[107m [0m [2m# summary = false    # Enable LLM branch summaries (requires [commit.generation])[0m
[107m [0m [2m#[0m
[107m [0m [2m# full = false       # Show CI, main…± diffstat, and LLM summaries (--full)[0m
[107m [0m [2m# branches = false   # Include branches without worktrees (--branches)[0m
[107m [0m [2m# remotes = false    # Include remote-only branches (--remotes)[0m
[107m [0m [2m#[0m
[107m [0m [2m# task-timeout-ms = 0   # Kill individual git commands after N ms; 0 disables[0m
[107m [0m [2m# timeout-ms = 0        # Wall-clock budget for the entire collect phase; 0 disables[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Commit[0m
[107m [0m [2m#[0m
[107m [0m [2m# Shared by `wt step commit`, `wt step squash`, and `wt merge`.[0m
[107m [0m [2m#[0m
[107m [0m [2m# [commit][0m
[107m [0m [2m# stage = "all"      # What to stage before commit: "all", "tracked", or "none"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Merge[0m
[107m [0m [2m#[0m
[107m [0m [2m# Most flags are on by default. Set to false to change default behavior.[0m
[107m [0m [2m#[0m
[107m [0m [2m# [merge][0m
[107m [0m [2m# squash = true      # Squash commits into one (--no-squash to preserve history)[0m
[107m [0m [2m# commit = true      # Commit uncommitted changes first (--no-commit to skip)[0m
[107m [0m [2m# rebase = true      # Rebase onto target before merge (--no-rebase to skip)[0m
[107m [0m [2m# remove = true      # Remove worktree after merge (--no-remove to keep)[0m
[107m [0m [2m# verify = true      # Run project hooks (--no-hooks to skip)[0m
[107m [0m [2m# ff = true          # Fast-forward merge (--no-ff to create a merge commit instead)[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Remove[0m
[107m [0m [2m#[0m
[107m [0m [2m# Persistent flag values for `wt remove`. Override on command line as needed.[0m
[107m [0m [2m#[0m
[107m [0m [2m# [remove][0m
[107m [0m [2m# delete-branch = true   # Delete branch after removal (--no-delete-branch to keep)[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Switch[0m
[107m [0m [2m#[0m
[107m [0m [2m# [switch][0m
[107m [0m [2m# cd = true          # Change directory after switching (--no-cd to skip)[0m
[107m [0m [2m#[0m
[107m [0m [2m# [switch.picker][0m
[107m [0m [2m# pager = "delta --paging=never"   # Example: override git's core.pager for diff preview[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Step[0m
[107m [0m [2m#[0m
[107m [0m [2m# [step.copy-ignored][0m
[107m [0m [2m# exclude = []   # Additional excludes (e.g., [".cache/", ".turbo/"])[0m
[107m [0m [2m#[0m
[107m [0m [2m# Built-in excludes always apply: VCS metadata directories (`.bzr/`, `.hg/`, `.jj/`, `.pijul/`, `.sl/`, `.svn/`) and tool-state directories (`.conductor/`, `.entire/`, `.worktrees/`). User config and project config exclusions are combined.[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Aliases[0m
[107m [0m [2m#[0m
[107m [0m [2m# Command templates that run as `wt <name>`. See the Extending Worktrunk guide (https://worktrunk.dev/extending/#aliases) for usage and flags.[0m
[107m [0m [2m#[0m
[107m [0m [2m# [aliases][0m
[107m [0m [2m# greet = "echo Hello from {{ branch }}"[0m
[107m [0m [2m# url = "echo http://localhost:{{ branch | hash_port }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# Aliases defined here apply to all projects. For project-specific aliases, use the project config (https://worktrunk.dev/config/#project-configuration) `[aliases]` section instead.[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### User project-specific settings[0m
[107m [0m [2m#[0m
[107m [0m [2m# For context:[0m
[107m [0m [2m#[0m
[107m [0m [2m# - Project config (https://worktrunk.dev/config/#project-configuration) settings are shared with teammates.[0m
[107m [0m [2m# - User configs generally apply to all projects.[0m
[107m [0m [2m# - User configs _also_ has a `[projects]` table which holds project-specific settings for the user, such as worktree layout and setting overrides. That's what this section covers.[0m
[107m [0m [2m#[0m
[107m [0m [2m# Entries are keyed by project identifier (e.g., `github.com/user/repo`). Scalar values (like `worktree-path`) replace the global value; everything else (hooks, aliases, etc.) appends, global first.[0m
[107m [0m [2m#[0m
[107m [0m [2m# [projects."github.com/user/repo"][0m
[107m [0m [2m# worktree-path = ".worktrees/{{ branch | sanitize }}"[0m
[107m [0m [2m# list.full = true[0m
[107m [0m [2m# merge.squash = false[0m
[107m [0m [2m# remove.delete-branch = false[0m
[107m [0m [2m# pre-start.env = "cp .env.example .env"[0m
[107m [0m [2m# step.copy-ignored.exclude = [".repo-local-cache/"][0m
[107m [0m [2m# aliases.deploy = "make deploy BRANCH={{ branch }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ### Custom prompt templates[0m
[107m [0m [2m#[0m
[107m [0m [2m# Templates use minijinja (https://docs.rs/minijinja/) syntax.[0m
[107m [0m [2m#[0m
[107m [0m [2m# #### Commit template[0m
[107m [0m [2m#[0m
[107m [0m [2m# Available variables:[0m
[107m [0m [2m#[0m
[107m [0m [2m# - `{{ git_diff }}`, `{{ git_diff_stat }}` — diff content[0m
[107m [0m [2m# - `{{ branch }}`, `{{ repo }}` — context[0m
[107m [0m [2m# - `{{ recent_commits }}` — recent commit messages[0m
[107m [0m [2m#[0m
[107m [0m [2m# Default template:[0m
[107m [0m [2m#[0m
[107m [0m [2m# <!-- DEFAULT_TEMPLATE_START -->[0m
[107m [0m [2m# [commit.generation][0m
[107m [0m [2m# template = """[0m
[107m [0m [2m# <task>Write a commit message for the staged changes below.</task>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <format>[0m
[107m [0m [2m# - Subject line under 50 chars[0m
[107m [0m [2m# - For material changes, add a blank line then a body paragraph explaining the change[0m
[107m [0m [2m# - Output only the commit message, no quotes or code blocks[0m
[107m [0m [2m# </format>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <style>[0m
[107m [0m [2m# - Imperative mood: "Add feature" not "Added feature"[0m
[107m [0m [2m# - Match recent commit style (conventional commits if used)[0m
[107m [0m [2m# - Describe the change, not the intent or benefit[0m
[107m [0m [2m# </style>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <diffstat>[0m
[107m [0m [2m# {{ git_diff_stat }}[0m
[107m [0m [2m# </diffstat>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <diff>[0m
[107m [0m [2m# {{ git_diff }}[0m
[107m [0m [2m# </diff>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <context>[0m
[107m [0m [2m# Branch: {{ branch }}[0m
[107m [0m [2m# {% if recent_commits %}<recent_commits>[0m
[107m [0m [2m# {% for commit in recent_commits %}- {{ commit }}[0m
[107m [0m [2m# {% endfor %}</recent_commits>{% endif %}[0m
[107m [0m [2m# </context>[0m
[107m [0m [2m#[0m
[107m [0m [2m# """[0m
[107m [0m [2m# <!-- DEFAULT_TEMPLATE_END -->[0m
[107m [0m [2m#[0m
[107m [0m [2m# #### Squash template[0m
[107m [0m [2m#[0m
[107m [0m [2m# Available variables (in addition to commit template variables):[0m
[107m [0m [2m#[0m
[107m [0m [2m# - `{{ commits }}` — list of commits being squashed[0m
[107m [0m [2m# - `{{ target_branch }}` — merge target branch[0m
[107m [0m [2m#[0m
[107m [0m [2m# Default template:[0m
[107m [0m [2m#[0m
[107m [0m [2m# <!-- DEFAULT_SQUASH_TEMPLATE_START -->[0m
[107m [0m [2m# [commit.generation][0m
[107m [0m [2m# squash-template = """[0m
[107m [0m [2m# <task>Write a commit message for the combined effect of these commits.</task>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <format>[0m
[107m [0m [2m# - Subject line under 50 chars[0m
[107m [0m [2m# - For material changes, add a blank line then a body paragraph explaining the change[0m
[107m [0m [2m# - Output only the commit message, no quotes or code blocks[0m
[107m [0m [2m# </format>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <style>[0m
[107m [0m [2m# - Imperative mood: "Add feature" not "Added feature"[0m
[107m [0m [2m# - Match the style of commits being squashed (conventional commits if used)[0m
[107m [0m [2m# - Describe the change, not the intent or benefit[0m
[107m [0m [2m# </style>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <commits branch="{{ branch }}" target="{{ target_branch }}">[0m
[107m [0m [2m# {% for commit in commits %}- {{ commit }}[0m
[107m [0m [2m# {% endfor %}</commits>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <diffstat>[0m
[107m [0m [2m# {{ git_diff_stat }}[0m
[107m [0m [2m# </diffstat>[0m
[107m [0m [2m#[0m
[107m [0m [2m# <diff>[0m
[107m [0m [2m# {{ git_diff }}[0m
[107m [0m [2m# </diff>[0m
[107m [0m [2m#[0m
[107m [0m [2m# """[0m
[107m [0m [2m# <!-- DEFAULT_SQUASH_TEMPLATE_END -->[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Hooks[0m
[107m [0m [2m#[0m
[107m [0m [2m# See `wt hook` (https://worktrunk.dev/hook/) for hook types, execution order, template variables, and examples. User hooks apply to all projects; project hooks (https://worktrunk.dev/config/#project-configuration) apply only to that repository.[0m

[1m[32mProject config[0m

With [2m--project[0m, creates [2m.config/wt.toml[0m in the current repository:

[107m [0m [2m# # Project Configuration[0m
[107m [0m [2m#[0m
[107m [0m [2m# Project configuration lets teams share repository-specific settings — hooks, dev server URLs, and other defaults. The file lives in `.config/wt.toml` and is typically checked into version control.[0m
[107m [0m [2m#[0m
[107m [0m [2m# To create a starter file with commented-out examples, run `wt config create --project`.[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Hooks[0m
[107m [0m [2m#[0m
[107m [0m [2m# Project hooks apply to this repository only. See `wt hook` (https://worktrunk.dev/hook/) for hook types, execution order, and examples.[0m
[107m [0m [2m#[0m
[107m [0m [2m# pre-start = "npm ci"[0m
[107m [0m [2m# post-start = "npm run dev"[0m
[107m [0m [2m# pre-merge = "npm test"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Dev server URL[0m
[107m [0m [2m#[0m
[107m [0m [2m# URL column in `wt list` (dimmed when port not listening):[0m
[107m [0m [2m#[0m
[107m [0m [2m# [list][0m
[107m [0m [2m# url = "http://localhost:{{ branch | hash_port }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Forge platform override[0m
[107m [0m [2m#[0m
[107m [0m [2m# Override platform detection for SSH aliases or self-hosted instances:[0m
[107m [0m [2m#[0m
[107m [0m [2m# [forge][0m
[107m [0m [2m# platform = "github"  # or "gitlab"[0m
[107m [0m [2m# hostname = "github.example.com"  # Example: API host (GHE / self-hosted GitLab)[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Copy-ignored excludes[0m
[107m [0m [2m#[0m
[107m [0m [2m# Additional excludes for `wt step copy-ignored`:[0m
[107m [0m [2m#[0m
[107m [0m [2m# [step.copy-ignored][0m
[107m [0m [2m# exclude = [".cache/", ".turbo/"][0m
[107m [0m [2m#[0m
[107m [0m [2m# Built-in excludes always apply: VCS metadata directories (`.bzr/`, `.hg/`, `.jj/`, `.pijul/`, `.sl/`, `.svn/`) and tool-state directories (`.conductor/`, `.entire/`, `.worktrees/`). User config and project config exclusions are combined.[0m
[107m [0m [2m#[0m
[107m [0m [2m# ## Aliases[0m
[107m [0m [2m#[0m
[107m [0m [2m# Command templates that run as `wt <name>`. See the Extending Worktrunk guide (https://worktrunk.dev/extending/#aliases) for usage and flags.[0m
[107m [0m [2m#[0m
[107m [0m [2m# [aliases][0m
[107m [0m [2m# deploy = "make deploy BRANCH={{ branch }}"[0m
[107m [0m [2m# url = "echo http://localhost:{{ branch | hash_port }}"[0m
[107m [0m [2m#[0m
[107m [0m [2m# Aliases defined here are shared with teammates. For personal aliases, use the user config (https://worktrunk.dev/config/#aliases) `[aliases]` section instead.[0m

----- stderr -----
